tests/fixtures/invalid/none_bitand_str.py
# Cannot bitwise AND None and Str
x: None = None & "hello"
